name: wanda
version: 0.1
license: GPL
license-file: COPYING
maintainer: arsenm2@rpi.edu
stability: experimental
homepage: http://example.com
category: Graphics
Synopsis: Wanda the fish
Description: A swimming fish
Build-Type: Simple

Cabal-Version: >= 1.6

Executable: wanda
Main-Is: Wanda.hs
pkgconfig-depends: gtk+-2.0, glib-2.0, gobject-2.0, gdk-2.0
--CC-Options: -O3 -march=core2 -mtune=core2 -maccumulate-outgoing-args
--GHC-Options: -W -O2 -fvia-c -funbox-strict-fields
GHC-Options: -W -O0 -funbox-strict-fields
Install-Includes: ./wanda_image.h
Include-Dirs: .
C-Sources: ./wanda_image.c
Extensions: ForeignFunctionInterface, ScopedTypeVariables
Build-Depends: base, glib, gtk, mtl, haskell98, array, cairo, mersenne-random-pure64, mersenne-random, binary, bytestring, process

