name: wanda
version: 0.1
license: GPL
license-file: COPYING
maintainer: arsenm2@rpi.edu
stability: experimental
homepage: http://example.com
Build-Type: Simple
Cabal-Version: >= 1.6
Tested-With: GHC==6.10.4
Synopsis: Wanda the fish
Description: Wanda, the unofficial GNOME mascot! A swimming fish
             inspired partially by the "fish" panel applet and the "free the fish"
             easter egg. Wanda is a fish who will swim around your screen, and when
             clicked she can either give you a fortune, or simply run away for a
             while providing countless hours of entertainment and inquiries as to
             why there's a fish swimming around your screen.

Executable: wanda
Main-Is: Wanda.hs
pkgconfig-depends: gtk+-2.0, glib-2.0, gobject-2.0, gdk-2.0, cairo
CC-Options: -O3 -march=core2 -mtune=core2 -maccumulate-outgoing-args
GHC-Options: -W -O2 -fvia-c -funbox-strict-fields
--GHC-Options: -W -O0 -funbox-strict-fields
Install-Includes: ./wanda_image.h
Include-Dirs: .
C-Sources: ./wanda_image.c
Extensions: ForeignFunctionInterface, ScopedTypeVariables, UnboxedTuples
Build-Depends: base, glib, gtk, mtl, haskell98, array, cairo, mersenne-random-pure64, binary, bytestring, process

